--- a/package.json
+++ b/package.json
@@ -4,27 +4,33 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "ts-node-dev src/server.ts",
+        "start": "ts-node-dev src/index.ts",
         "dev": "nodemon --exec src/index.ts"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "devDependencies": {
+        "@types/express-session": "^1.17.3",
         "nodemon": "^2.0.7",
         "ts-node-dev": "^1.1.6",
         "typescript": "^4.3.4"
     },
     "dependencies": {
-        "@types/express": "^4.17.12",
-        "@types/mongoose": "^5.11.97",
-        "@types/node": "^15.12.4",
+        "@types/bcrypt": "^5.0.0",
+        "@types/connect-mongo": "^3.1.3",
         "@types/cors": "^2.8.10",
         "@types/dotenv": "^8.2.0",
+        "@types/express": "^4.17.12",
+        "@types/mongoose": "^5.11.97",
         "@types/morgan": "^1.9.2",
+        "@types/node": "^15.12.4",
+        "bcrypt": "^5.0.1",
+        "connect-mongo": "^4.4.1",
         "cors": "^2.8.5",
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
+        "express-session": "^1.17.2",
         "mongoose": "^5.12.15",
         "morgan": "^1.10.0"
     }
